# mpxl2csv

./: LICENSE  README.md  pyproject.toml
mpxl2csv/: __init__.py  mpxl2csv.py
resources/sample_input/: Financial_Sample1.xlsx
resources/sample_output/: Financial_Sample2.csv  tests-example.csv
tests/: mp_tests.py
